--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
-version: "3"
-
 services:
   mysql:
-    image: mysql:latest
+    image: mysql:5.7
     container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: imersao17
-      MYSQL_PASSWORD: root
+      # MYSQL_DATABASE: imersao17
     ports:
-      - 3306:3306
+      - 3307:3306
     volumes:
       - .docker/mysql:/var/lib/mysql
+      - ./db.sql:/docker-entrypoint-initdb.d/db.sql
